--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@
 
 :root{
     font-size: 62.5%;
-    --bg-body: #c5e4e7;
-    --bg-main: #fff;
-    --strong-text: #5e7a7d;
-    --bg-div: #f3f9fa;
-    --input-text: #00474b;
+    --jagged-ice: #c5e4e7;
+    --white: #fff;
+    --greyish-turquoise: #5e7a7d;
+    --squeeze: #f3f9fa;
+    --sherpa-blue: #00474b;
+    --topaz: #26c2ae;
+    --beetle-green: #547878;
 }
 
 body {
     font-size: 1.6rem;
-    background: var(--bg-body);
+    background: var(--jagged-ice);
 }
 
 header {
@@ -30,36 +32,93 @@ header {
 }
 
 main {
-    background: var(--bg-main);
+    background: var(--white);
     padding: 3.2rem 2.4rem;
     border-radius: 2.5rem 2.5rem 0 0;
 }
 
-.info strong {
-    color: var(--strong-text);
-}
-
-.input-box {
-    margin-bottom: .6rem;
-    background: var(--bg-div);
-    padding: .6rem 1.8rem;
-    display: flex;
-    align-items: center;
-    border-radius: .5rem;
-
-    input {
-      border: none;  
-      background: transparent;
-      text-align: right;
-      width: 100%;
-      outline: none;
-      font-size: 2.4rem;
-      font-weight: 700;
-      color: var(--input-text);
-
-      &::placeholder {
-        color: var(--input-text);
-        opacity: 0.35;
-      }
+.info {
+    margin-inline: .8rem;
+    
+    div {
+        margin-top: 3.2rem;
     }
-}
+    
+    strong {
+        color: var(--greyish-turquoise);
+       }
+       .input-box {
+        margin-bottom: .6rem;
+        background: var(--squeeze);
+        padding: .6rem 1.8rem;
+        display: flex;
+        align-items: center;
+        border-radius: .5rem;
+       }
+        input {
+          border: none;  
+          background: transparent;
+          text-align: right;
+          width: 100%;
+          outline: none;
+          font-size: 2.4rem;
+          font-weight: 700;
+          color: var(--sherpa-blue);
+    
+          &::placeholder {
+            color: var(--sherpa-blue);
+            opacity: 0.35;
+          }
+     }
+
+     .input-box:has(input:focus) {
+        outline: 2px solid var(--topaz);
+     }
+
+     .tip {
+        div {
+            margin-top: 1.6rem;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1.6rem;
+
+            button {
+                font-size: 2.4rem;
+                color: var(--white);
+                background: var(--sherpa-blue);
+                border: none;
+                padding-block: .6rem;
+                font-weight: 700;
+                border-radius: .5rem;
+            }
+
+            input {
+                width: 100%;
+                border: none;
+                background: var(--squeeze);
+                border-radius: .5rem;
+                font-size: 2.4rem;
+                font-weight: 700;
+                text-align: center;
+                color: var(--sherpa-blue);
+
+                &::placeholder {
+                    color: var(--beetle-green);
+                }
+
+
+
+                &:focus {
+                    outline: 2px solid var(--topaz)
+                }
+            }
+        }
+     }
+ }
+   
+
+   
+    
+
+
+
