--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --sherpa-blue: #00474b;
     --topaz: #26c2ae;
     --beetle-green: #547878;
+    --regent-grey: #7f9d9f;
 }
 
 body {
@@ -114,6 +115,47 @@ main {
             }
         }
      }
+ }
+
+ .results {
+    background: var(--sherpa-blue);
+    border-radius: 1.5rem;
+    padding: 4rem 2.4rem 2.4rem;
+
+    .amount,
+    .total {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 2.4rem;
+
+        p {
+            color: var(--white);
+            font-weight: 700;
+
+            span {
+                color: var(--regent-grey);
+                font-size: 1.6rem;
+            }
+        }
+        strong {
+            font-size: 3.2rem;
+            color: var(--topaz);
+        }
+
+    }
+
+        button {
+            background: var(--topaz);
+            color: var(--sherpa-blue);
+            font-size: 2rem;
+            text-transform: uppercase;
+            width: 100%;
+            border: none;
+            border-radius: .5rem;
+            font-weight: 700;
+            padding-block: .9rem;
+        }
  }
    
 
