--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     --topaz: #26c2ae;
     --beetle-green: #547878;
     --regent-grey: #7f9d9f;
+    --water-leaf: #9fe8df;
 }
 
 body {
@@ -156,6 +157,61 @@ main {
             font-weight: 700;
             padding-block: .9rem;
         }
+ }
+
+ @media(min-width: 920px) {
+    main {
+        display: flex;
+        max-width: 92rem;
+        margin-inline: auto;
+        border-radius: 2.5rem;
+        gap: 4.8rem;
+        padding: 4.8rem;
+    }
+
+    section {
+        width: 100%;
+    }
+
+    input::-webkit-inner-spin-button,
+    input::-webkit-outer-spin-button {
+        display: none;
+    }
+
+    .info {
+        .tip {
+            div {
+               grid-template-columns:repeat(3, 1fr);
+
+               button:hover {
+                background: var(--topaz);
+                cursor: pointer;
+                transition: .3s;
+               }
+            }
+       }
+    }
+
+    .results {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 5.6rem 4rem 4rem;
+
+        .amount,
+        .total {
+            strong {
+                font-size: 4.8rem;
+
+            }
+        }
+
+        button hover {
+                background: var(--water-leaf);
+                transition: .3s;
+                cursor: pointer;
+        }
+    }
  }
    
 
