inicio do javascript, recebendo o valor do número de pessoas e conta

--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ main {
                 border-radius: .5rem;
             }
 
+            .button-selected {
+                background: var(--topaz);
+            }
+
             input {
                 width: 100%;
                 border: none;
